<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorSecondary"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerCopyright"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/ccpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkToCCP"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerContacts"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerPP"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/ppLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkToPP"
        android:textColor="@color/orange"
        android:textSize="20sp"/>
</LinearLayout>